# docs/swagger.json
@@ -33,7 +33,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/helpers.SuccessResponse"
+                                    "$ref": "#/definitions/utils.JSONResponse"
                                 },
                                 {
                                     "type": "object",
@@ -52,7 +52,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/helpers.FailedResponse"
+                            "$ref": "#/definitions/utils.JSONResponse"
                         }
                     }
                 }
@@ -109,7 +109,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/helpers.SuccessResponse"
+                                    "$ref": "#/definitions/utils.JSONResponse"
                                 },
                                 {
                                     "type": "object",
@@ -128,7 +128,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/helpers.FailedResponse"
+                            "$ref": "#/definitions/utils.JSONResponse"
                         }
                     }
                 }
@@ -153,7 +153,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/helpers.SuccessResponse"
+                                    "$ref": "#/definitions/utils.JSONResponse"
                                 },
                                 {
                                     "type": "object",
@@ -172,7 +172,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/helpers.FailedResponse"
+                            "$ref": "#/definitions/utils.JSONResponse"
                         }
                     }
                 }
@@ -197,7 +197,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/helpers.SuccessResponse"
+                                    "$ref": "#/definitions/utils.JSONResponse"
                                 },
                                 {
                                     "type": "object",
@@ -216,7 +216,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/helpers.FailedResponse"
+                            "$ref": "#/definitions/utils.JSONResponse"
                         }
                     }
                 }
@@ -224,41 +224,6 @@
         }
     },
     "definitions": {
-        "helpers.FailedResponse": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "integer",
-                    "example": 400
-                },
-                "message": {
-                    "type": "string",
-                    "example": "Failed"
-                },
-                "success": {
-                    "type": "boolean",
-                    "example": false
-                }
-            }
-        },
-        "helpers.SuccessResponse": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "integer",
-                    "example": 200
-                },
-                "data": {},
-                "message": {
-                    "type": "string",
-                    "example": "Success"
-                },
-                "success": {
-                    "type": "boolean",
-                    "example": true
-                }
-            }
-        },
         "types.Category": {
             "type": "object",
             "properties": {
@@ -338,6 +303,21 @@
                 "name": {
                     "type": "string",
                     "example": "lorem"
+                }
+            }
+        },
+        "utils.JSONResponse": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                },
+                "timestamp": {
+                    "type": "integer"
                 }
             }
         }
